k8s/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-cloud-app
  labels:
    app: my-cloud-app
spec:
  selector:
    app: my-cloud-app
  ports:
  - port: 8080
