k8s/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-db
  labels:
    app: my-db
spec:
  selector:
    app: my-db
  ports:
  - port: 5432
