k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-db
spec:
  selector:
    app: my-db
  ports:
  - port: 5432
